rev 546 (2018-10-19) (krueschan)
- clarifying system requirements in README.md
- edit .gitignore file
- add .htaccess file for database manager

rev 545 (2018-10-18) (krueschan)
- Major: 
  - added new 1.5°C LED scenario to splash page, removed old G8 Pathway
  - we decided to drop support for LLULUCF in the NDC analysis (the data just isn't good enough). Thus, "include LULUCF" checkbox has been removed. In a later update, we will reinstate including LULUCF in the calculation of historical responsibility but not in NDC assessment.
- Minor: 
  - fix issues arising from merging helpdb and pledge db projects, including re-adding TinyMCE to the helpdb
  - added infrastructure to support ability to make popup notice appear on calculator load
  - updated helpdb
  - added display of webcalc version to footer


rev 544 (2018-10-17) (krueschan)
- Adding JOSS paper draft

--------------------------------------- NOTICE ---------------------------------------------- 
commit/rev numbers below are out of sync as a result of merging the 
commit history of cerc-web, pledgedb and helpdb projects and rebasing the merged repository
-------------------------------------- /NOTICE ----------------------------------------------

rev 479 (2018-10-08) (tylerkb)
- change license of HWTHelp.php file

rev 478 (2018-10-07) (krueschan)
- generic config.php.new file

rev 477 (2018-10-07) (krueschan)
- add LICENSE to project, fix license where conflict existed

rev 476 (2017-11-02) (krueschan)
- added URL parameter 'dl_wide' to tsv download (download_tabsep.php). If dl_wide=1, the download omits the info and settings table at the top but
  adds settings, calc_version and db_version to each data entry (the idea is to enable more straightforward parsing into statistics software)

rev 475 (2017-07-18) (krueschan)
- added logging of calculator settings to ../sessions/param_log.txt file on each call of the calculator engine

rev 474 (2017-03-02) (krueschan)